--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         </div>
     </nav>
-    <div data-bs-parallax-bg="true" style="height:1500px;background-image:url(&quot;assets/img/background1.jpg&quot;);background-position:center;background-size:cover;width:100%;">
+    <div data-bs-parallax-bg="true" style="height:1436px;background-image:url(&quot;assets/img/par.jpg&quot;);background-position:center;background-size:cover;width:100%;">
         <div><img style="background-image:url(&quot;assets/img/16406988_10158216674220607_5414039587089851668_n.jpg&quot;);margin:165px;width:200px;height:200px;padding:0px;margin-right:40%;margin-left:44%;">
             <p class="text-center" style="color:rgb(208,197,55);margin-top:-153px;margin-bottom:0px;padding:63px;"><strong>Lorem Ipsum</strong> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make
                 a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
@@ -44,7 +44,7 @@
             </div>
         </div>
     </div>
-    <div data-bs-parallax-bg="true" style="height:1500px;background-image:url(&quot;assets/img/background1.jpg&quot;);background-position:center;background-size:cover;width:100%;">
+    <div data-bs-parallax-bg="true" style="height:1436px;background-image:url(&quot;assets/img/par.jpg&quot;);background-position:center;background-size:cover;width:100%;">
         <div>
             <h2 class="text-center" style="color:rgb(255,255,255);">Projects </h2><img style="background-image:url(&quot;assets/img/Untitled-3.png&quot;);width:39%;margin:32px;height:70px;margin-right:32px;margin-left:29%;"><img style="background-image:url(&quot;assets/img/macroreadme.png&quot;);width:39%;margin:32px;height:195px;margin-right:32px;margin-left:29%;">
             <div></div>
