--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     -->
     <title>React App</title>
   </head>
-  <body>
+  <body style = "background-color:rgb(40,37,37)">
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
