--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="assets/css/styles.min.css">
 </head>
 
-<body style="width:100%;height:100%;margin:0px;">
+<body style="width:100%;height:100%;margin:0px;background-image: url("https://i.imgur.com/61OdtWx.jpg")">
     <nav class="navbar navbar-light navbar-expand-md" style="color:rgb(44,103,163);background-color:#2c3134;">
         <div class="container-fluid"><a class="navbar-brand" href="#" style="color:rgba(249,248,248,0.9);">Yash Rajgor</a><button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div
